--- a/todos-app-with-backend/public/style.css
+++ b/todos-app-with-backend/public/style.css
@@ -1,7 +1,3 @@
-/** {*/
-/*    min-width: 1080px;*/
-/*}*/
-
 body {
     font-size: 16px;
 }
@@ -30,7 +26,7 @@ body {
 }
 
 #todolist .list .form-group > label.text:hover {
-    background-color: #eee;
+    /*background-color: #eee;*/
 }
 
 #fa {
